@@ -1,6 +1,6 @@
 <METHODRESPONSE NAME="TestCMPIBroker">
 <RETURNVALUE PARAMTYPE="uint32">
-<VALUE>1</VALUE>
+<VALUE>0</VALUE>
 </RETURNVALUE>
 <PARAMVALUE NAME="Result" PARAMTYPE="string">
 <VALUE>_testCMPIInstance </VALUE>
