@@ -105,6 +105,7 @@ Bugs Fixed:
 - 3525651 CMSetPropertyFilter not CMPI 2.0 compliant
 - 3527693 Property filters don't work for enum upcalls
 - 3524819 sfcb may hang on ac call to indication subscription
+- 3528074 Improve CMPIInstance Error Codes
 
 Changes in 1.3.14
 =================
