@@ -1,3 +1,10 @@
+2012-05-18  Chris Buccella  <buccella@linux.vnet.ibm.com>
+
+	* instance.c, test/TestProviders/cmpiTestMiscProvider.c,
+	test/TestProviders/test/TestMisc8.lines:
+	[ 3528074 ] Improve CMPIInstance Error Codes
+	(patch by Tyrel Datwyler)
+
 2012-05-18  Narasimha Sharoff  <nsharoff@us.ibm.com>
 
         * indCIMXMLHander.c:
